# homekit-py

./: README.md  Taskfile.dist.yml  pyproject.toml
.agents/skills/: homekit  huehub
.claude/: settings.json
docs/: config.toml.example  daemon.md  entity-model.md  pairing.md  protocol.md  troubleshooting.md
homekit/: __init__.py  client.py  config.py  discovery.py  exceptions.py
homekit/backends/: __init__.py  aiohomekit_backend.py
homekit/cli/: __init__.py  exit_codes.py  main.py
homekit/core/: __init__.py  aliases.py  backend.py  cache.py  events.py  models.py  policy.py  registry.py  storage.py
homekit/daemon/: __init__.py  client.py  lifecycle.py  main.py  protocol.py  server.py
homekit/diagnostics/: __init__.py  mcp_security.py  mdns.py  network.py  pairability.py  storage.py
homekit/mcp_server/: __init__.py  server.py
skill/homekit/: SKILL.md
spec/: homekit_implementierungsplan.md
tests/: conftest.py  fake_backend.py
tests/unit/: test_aliases.py  test_cache.py  test_cli.py  test_client.py  test_config.py  test_daemon_lifecycle.py  test_daemon_protocol.py  test_daemon_server.py  test_diagnostics.py  test_discovery.py  test_events.py  test_mcp_server.py  test_models.py  test_policy.py  test_registry.py  test_storage.py
