[project]
name = "homekit-py"
version = "0.3.0"
description = "Local control of Apple HomeKit devices via HAP: library, CLI, and MCP server"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Jens Rehpöhler" }]
keywords = ["homekit", "apple-homekit", "smart-home", "mcp", "hap"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
]

dependencies = [
    "typer==0.25.1",
    "pydantic==2.13.4",
    "fastmcp==3.2.4",
    "zeroconf==0.148.0",
    "platformdirs==4.9.6",
    "aiohomekit==3.2.20",
    "keyring==25.7.0",
    "pydantic-settings==2.14.1",
    "rich==15.0.0",
]

[dependency-groups]
dev = [
    "bump-my-version==1.3.0",
    "detect-secrets==1.5.0",
    "pre-commit==4.6.0",
    "pytest_asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-httpx==0.36.2",
    "pytest==9.0.3",
    "ruff==0.15.13",
]

[project.optional-dependencies]
simulator = ["HAP-python>=4.9.0"]

[project.scripts]
homekit = "homekit.cli.main:app"
homekit-mcp = "homekit.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/jenreh/homekit-py"
Repository = "https://github.com/jenreh/homekit-py"

[tool.hatch.build.targets.wheel]
packages = ["homekit"]

[tool.hatch.build.targets.sdist]
include = [
    "/homekit",
    "/docs",
    "README.md",
    "pyproject.toml",
]
exclude = [
    ".agents/",
    ".cache/",
    ".claude/",
    ".devcontainer/",
    ".github/",
    ".vscode/",
    "skill/",
    "spec/",
    "tests/",
    ".env",
    ".gitignore",
    ".pre-commit-config.yaml",
    "AGENTS.md",
    "coverage.xml",
    "Taskfile.yaml",
]

[tool.bumpversion]
commit = false
current_version = "0.3.0"
tag = false
allow-dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4
line-length = 88
target-version = "py312"
extend-exclude = [
    ".cache",
    ".claude",
    ".devcontainer",
    ".github",
    ".vscode",
    ".web",
    "build",
    "dist",
    "docs",
    "infra",
    "prompts",
    "scripts",
    "static",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "EM101", # Exception must not use a string literal
    "EM102", # Exception must not use a string literal with a format specifier
    "ISC001", # Implicit string concatenation
    "N811", # Constant {name} imported as non-constant {asname}
    "N818", # Exception name {name} should be named with an Error suffix
    "PLR0913", # Too many arguments in function
    "PT011", # pytest-raises-too-broad
    "PT012", # pytest.raises() block should contain a single simple statement
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar
    "RUF100", # unused noqa
    "SIM300", # Yoda conditions are discouraged, use {suggestion} instead
    "E501", # Line too long
    "B008", # Function call in argument defaults (needed for Typer)
    "ASYNC240", # Async functions not using trio.Path
    "PYI034", # __aenter__ return Self
    "S101", # Use of assert
    "PLR0912", # Too many branches
    "ASYNC109", # Async timeout parameter
    "ARG001", # Unused function argument
    "PLR2004", # Magic value used in comparison
    "PLW0603", # Using global statement
    "PLC0415", # import at top level
    "SIM105", # Use contextlib.suppress
    "PLW2901", # loop variable overwritten
    "PLR0911", # Too many return statements
    "B017", # assert blind exception
    "RUF001", # String contains ambiguous character
    "RUF002", # Docstring contains ambiguous character
    "RUF003", # Comment contains ambiguous character
]
select = [
    "A", # Flake8-builtins
    "ANN001",
    "ANN201", # Missing return type annotation
    "ARG", # Flake8-arguments
    "ASYNC", # Flake8-async
    "B", # Flake8-bugbear
    "C4", # Flake8-comprehensions
    "DTZ", # Flake8-datetimez
    "E", # Pyflakes
    "EM", # Flake8-errmsg
    "EXE", # Flake8-executable
    "F", # Pyflakes
    "FIX", # Flake8-fixme
    "FAST", # FastAPI
    "G", # Flake8-logging-format
    "ICN", # Flake8-import-conventions
    "LOG", # Flake8-logging
    "N", # Naming
    "PERF", # Perflint
    "PIE", # Flake8-pie
    "PL", # PyLint
    "PT", # Flake8-pytest-style
    "PTH", # Flake8-use-pathlib
    "PYI", # Flake8-pyi
    "Q", # Flake8-quotes
    "RET", # Flake8-return
    "RUF", # Ruff
    "S", # Flake8-bandit
    "SIM", # Flake8-simplify
    "SLF", # Flake8-self
    "SLF001", # Flake8-self
    "T20", # Flake8-print
    "TID", # Flake8-tidy-imports
    "UP", # PyUpgrade - will show hints for deprecated syntax in python 3.11
    "W", # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"] # {name} imported but unused
"server.py" = ["W605", "S104"] # invalid escape sequence
"test_**.py" = [
    "S101",
    "PLR2004",
    "ANN001",
    "S106",
    "SLF001",
    "RET504",
    "PERF401",
    "E402",
    "S501",
    "S110",
    "ARG002",
    "ARG005",
    "E741",
    "RUF059",
]
"alembic/versions/*.py" = ["E501"]
"indexer/main.py" = ["S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = ["*.pyi"]

[tool.ruff.lint.isort]
known-local-folder = ["app", "alembic"]
known-first-party = ["appkit_*"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "C0301",
    "C0415",
    "W0621",
    "E0239",
    "E1101",
    "E1102",
    "E1120",
    "E1136",
    "W0718",
    "R0903",
    "W0611",
    "W0613",
    "W0622",
]

[tool.mypy]
cache_dir = ".cache/mypy"
disallow_untyped_defs = true
incremental = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_errors = true
ignore_missing_imports = false
exclude = [
    ".cache",
    ".claude",
    ".venv",
    ".venv.mac",
    ".venv_mac",
    ".web",
    ".github",
    ".devcontainer",
    ".idea",
    ".vscode",
    "build",
    "dist",
    "docs",
    "infra",
    "prompts",
    "scripts",
    "static",
    "uploads",
]

[tool.coverage.run]
branch = true
source = ["homekit"]
omit = [
    "homekit/backends/aiohomekit_backend.py",
    "homekit/core/backend.py",
    "homekit/cli/main.py",
    "homekit/mcp_server/server.py",
    "homekit/diagnostics/mdns.py",
    "homekit/diagnostics/network.py",
    "homekit/diagnostics/pairability.py",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:", "pragma: no cover"]
fail_under = 80
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
